--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 
 .NavigationControls {
   display: flex;
-  justify-content: center; /* Center buttons horizontally */
-  align-items: center; /* Center buttons vertically */
-  width: 100%; /* Take full width of the parent container */
-  margin: 20px 0; /* Add margin for spacing */
+  justify-content: center; 
+  align-items: center; 
+  width: 100%; 
+  margin: 20px 0; 
 }
 
 button {
@@ -73,4 +73,79 @@ button:disabled:hover {
 
 .Card-link:hover {
   text-decoration: underline;
+}
+
+/* navs */
+nav {
+  width: 100%;
+  background-color: #333; 
+  padding: 10px 0; 
+}
+
+nav ul {
+  list-style-type: none; 
+  display: flex; 
+  justify-content: center; 
+  padding: 0; 
+  margin: 0; 
+}
+
+nav li {
+  margin: 0 20px; 
+}
+
+nav a {
+  color: white;
+  text-decoration: none; 
+  font-size: 1.2rem; 
+  transition: color 0.3s ease-in-out; 
+}
+
+nav a:hover {
+  color: #305bf6; 
+  text-decoration: none;
+  transition: color 0.3s ease-in-out; 
+}
+
+nav a:active {
+  color: #21a1f1;
+}
+
+/* smartphoneList */
+.SmartphoneList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  background-color: #f4f4f9;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 25%;
+  max-width: 600px;
+}
+
+.SmartphoneItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+
+input[type="checkbox"] {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+label {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  transition: color 0.3s ease;
 }
